--- a/dvc.yaml
+++ b/dvc.yaml
@@ -4,31 +4,31 @@ stages:
     deps:
     - src/get_data.py
     - src/load_data.py
-    - source_code/insurance_course5i.csv
+    - source_code/flight_c5.csv
 
     outs:
-    - data/raw/insurance_course5i.csv
+    - data/raw/flight_c5.csv
 
   split_data:
     cmd: python src/split_data.py --config=params.yaml
     deps:
     - src/split_data.py
-    - data/raw/insurance_course5i.csv
+    - data/raw/flight_c5.csv
 
     outs:
-    - data/processed/train_insurance_course5i.csv
-    - data/processed/test_insurance_course5i.csv
+    - data/processed/train_flight_c5.csv
+    - data/processed/test_flight_c5.csv
 
   train_and_evaluate:
     cmd: python src/train_and_evaluate.py --config=params.yaml
     deps:
-    - data/processed/train_insurance_course5i.csv
-    - data/processed/test_insurance_course5i.csv
+    - data/processed/train_flight_c5.csv
+    - data/processed/test_flight_c5.csv
     - src/train_and_evaluate.py
 
     params:
-    - estimators.ElasticNet.params.alpha
-    - estimators.ElasticNet.params.l1_ratio
+    - estimators.RandomForestRegressor.params.n_estimators
+    - estimators.RandomForestRegressor.params.max_depth
 
     metrics:
     - reports/scores.json
